force-app/main/default/objects/Account/fields/Business_Approval__c.field-meta.xml
<CustomField>
    <fullName>Business_Approval__c</fullName>
    <label>Business Approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>