force-app/main/default/objects/Account/fields/Collection__c.field-meta.xml
<CustomField>
    <fullName>Collection__c</fullName>
    <label>Collection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>