force-app/main/default/objects/Account/fields/Valid_Account__c.field-meta.xml
<CustomField>
    <fullName>Valid_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid Account</label>
    <type>Checkbox</type>
</CustomField>