force-app/main/default/objects/Account/recordTypes/Alpha.recordType-meta.xml
<RecordType>
    <fullName>Alpha</fullName>
    <active>true</active>
    <label>Alpha</label>
</RecordType>